--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                         This project focused on creating an intuitive, modern, and accessible website for Svenskt Vatten. By collaborating closely with the client, we redefined their goals, 
                                         simplified navigation, and made their education offerings more visible. Accessibility and user-centered design were priorities throughout, resulting in a dynamic, 
                                         inclusive site that meets WCAG 2.2 standards.
-                                        <h4>Key Achievements:</h4>
+                                        <p>Key Achievements:</p>
                                         <ul class="mb-4 text-start">
                                             <li>Developed clear goals and tailored the website to diverse audiences.</li>
                                             <li>Created a new Information Architecture and detailed wireframes.</li>
@@ -429,7 +429,7 @@
                                         I facilitated cross-functional collaboration with stakeholders, developers, and SAMBO to identify user needs through interviews and workshops. 
                                         Key goals included preserving existing user groups, raising awareness about the initiative, and enhancing communication between users and the police. 
                                         I created wireframes in Figma, conducted accessibility testing to meet WCAG 2.2 standards, and ensured iterative design through agile collaboration. The resulting app enhances community safety and communication, is accessible to all users, and supports iOS and Android platforms.
-                                        <h4>Key Achievements:</h4>
+                                        <p>Key Achievements:</p>
                                         <ul class="mb-4 text-start">
                                             <li>Developed clear goals and tailored the website to diverse audiences.</li>
                                             <li>Created a new Information Architecture and detailed wireframes.</li>
@@ -449,13 +449,13 @@
                                         challenges and requirements. We interviewed SSF in order to find what complaints they have gotten from the old app, and we interviewed the swedish police in order to 
                                         find out both their pain points but also get a greater understanding of ho the police and civil users uses the app. This information formed the basis for a requirements 
                                         specification and wireframes that reflected both client and user expectations.
-                                        <h4>Some pain points that we early identified was:</h4>
+                                        <p>Some pain points that we early identified was:</p>
                                         <ul class="mb-4 text-start">
                                             <li>There is an old app with users that already has groups, and many groups are not even in the app but instead in a mail list. These groups need to be preserved</li>
                                             <li>People don't understand what the initiative Neighbourhood Watch is, and frequently join "fake" groups on Facebook, that doesn't have the police contact that the real Neighbourhood watch has</li>
                                             <li>The engagement in the app is low, which causes the safety-effect of having a Neighbourhood Watch to lower</li>
                                           </ul>
-                                          <h4>And thus, the goal of the project became:</h4>
+                                          <p>And thus, the goal of the project became:</p>
                                           <ul>
                                               <li class="mb-4 text-start">Create an MVP that allows people to create and join groups</li>
                                               <li>Allow for existing groups to be moved to the new app, without having to redo their groups</li>
@@ -540,7 +540,7 @@
                                     <p class="mb-4">
                                         This project focused on designing an accessible, informative website for LRF Samköp, aligning with their brand and accommodating both smaller and larger customers. Through cross-functional collaboration, iterative design, and stakeholder engagement, we developed a site that supports effective communication and enhances customer journeys for diverse user groups.
                                         </p>
-                                        <h4>Key Achievements:</h4>
+                                        <p>Key Achievements:</p>
                                         <ul class="mb-4 text-start">
                                             <li>Conducted user interviews and workshops to define customer needs and content structure.</li>
                                             <li>Created detailed customer journeys and wireframes to inform the site design.</li>
