--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                                           </ul>
                                           <p>And thus, the goal of the project became:</p>
                                           <ul>
-                                              <li class="mb-4 text-start">Create an MVP that allows people to create and join groups</li>
+                                              <li>Create an MVP that allows people to create and join groups</li>
                                               <li>Allow for existing groups to be moved to the new app, without having to redo their groups</li>
                                               <li>Raise awareness of what the initiative Neighbourhood is and how it actually works by introducing videos in onboarding and news articles in the app</li>
                                               <li>Introduce an easy way to chat within groups, to give users a reason to frequently engage with the app</li>
